--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,12 @@
     padding: 0;
 }
 
+@media screen and (min-width: 640px) {
+    body {
+        overflow-x: hidden;
+    }
+}
+
 body {
     min-height: 100vh;
     overflow-x: hidden;
