--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,16 @@
     padding: 0;
 }
 
+@viewport {
+    width: extend-to-zoom;
+    zoom: 1.0;
+}
+
+@-ms-viewport {
+    width: extend-to-zoom;
+    zoom: 1.0;
+}
+
 @media screen and (min-width: 576px) {
     body {
         overflow-x: hidden;
@@ -76,7 +86,7 @@ section {
 h2 {
     color: #fff;
     font-family: 'Pacifico', sans-serif;
-    font-size: 3em;
+    font-size: clamp(5vh, 3em, 15vw);
     font-weight: 400;
     margin-bottom: 15px;
     text-shadow: 2px 2px 4px rgba(0,0,0,.25);
@@ -84,13 +94,13 @@ h2 {
 
 p {
     color: #fff;
-    font-size: max(1em);
+    font-size: clamp(1vh, 1em, 2vw);
     font-weight: 300;
     padding: 10px;
 }
 
 .logo {
-    font-size: 2em;
+    font-size: clamp(1vh, 2em, 5vw);
     color : #ffffffb6;
     pointer-events : none;
 }
@@ -135,7 +145,7 @@ ul li a:hover {
 
 #text {
     color : #fff;
-    font-size: 6em;
+    font-size: clamp(5vh, 6em, 12vw);
     position: absolute;
     text-shadow: 2px 2px 4px rgba(0,0,0,.2);
 }
@@ -175,6 +185,7 @@ ul li a:hover {
     max-width: 45%;
     position: absolute;
     top: 55%;
+    z-index: 100;
 }
 
 #nuage_1 {
