--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,7 @@ section {
 h2 {
     color: #fff;
     font-family: 'Pacifico', sans-serif;
-    font-size: clamp(5vh, 3em, 15vw);
+    font-size: 3em;
     font-weight: 400;
     margin-bottom: 15px;
     text-shadow: 2px 2px 4px rgba(0,0,0,.25);
@@ -44,7 +44,7 @@ h2 {
 
 p {
     color: #fff;
-    font-size: clamp(3vh, 1em, 2vw);
+    font-size: 1em;
     font-weight: 300;
     padding: 10px;
 }
@@ -421,4 +421,16 @@ footer .cvita a{
     color: #8976a8;
     padding: 10px 50px;
     transition : 1000ms;
+}
+
+@media (max-width: 991px) {
+
+    header {
+        padding: 30px 35px; 
+    }
+
+    section {
+        padding: 30px;
+    }
+    
 }
