--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,7 +45,7 @@ h2 {
 
 p {
     color: #fff;
-    font-size: clamp(0.8em, 1em, 1em);
+    font-size: clamp(0.6vh, 1em, 5vw);
     font-weight: 300;
     padding: 10px;
 }
@@ -143,6 +143,7 @@ ul li a:hover {
     margin: 20px;
     max-height: 35%;
     max-width: 35%;
+    min-width: 150px;
     position: absolute;
     z-index: 10000;
 }
@@ -182,7 +183,7 @@ ul li a:hover {
     box-shadow: 7px 7px 14px #33223a,
                 -7px -7px 14px #432e4c;
     display: flex;
-    padding: 5px 10px;
+    padding: 8px 5px;
     z-index: 10;
 }
 
@@ -306,8 +307,8 @@ ul li a:hover {
     width: 90%;
 }
 
-#projet .glass .section {
-    padding: 20px;
+#projet .glass .slider_section {
+    display: contents;
 }
 
 .slider_text {
@@ -329,7 +330,6 @@ ul li a:hover {
                 5px -5px 22px #ffffff;
     display: flex;
     height: 21rem;
-    nav-down: hidden;
     overflow-x: auto;
     scroll-behavior: smooth;
     scroll-snap-type: x mandatory;
@@ -439,7 +439,7 @@ footer .cvita a{
 
     section {
         height: 100%;
-        padding: 10%;
+        padding: 8%;
     }
 
     h2 {
@@ -478,7 +478,7 @@ footer .cvita a{
 
     #schools .container .space {
         max-height: 100px;
-        width: 10px;
+        width: 5px;
     }
 
     #art_ap, #science_co {
