--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,9 +26,9 @@ header {
 }
 
 section {
-    background: #3b2843;
-    display:flow-root;
-    height: 100vh;
+    background: #41234c;
+    display: flow-root;
+    height: clamp(500px, 110vh, 150vh);
     padding: 5% 7%;
     position: relative;
     overflow: hidden;
@@ -37,7 +37,7 @@ section {
 h2 {
     color: #fff;
     font-family: 'Pacifico', sans-serif;
-    font-size: 3em;
+    font-size: clamp(2.5rem, 7vh, 3rem);
     font-weight: 400;
     margin-bottom: 15px;
     text-shadow: 2px 2px 4px rgba(0,0,0,.25);
@@ -45,7 +45,7 @@ h2 {
 
 p {
     color: #fff;
-    font-size: clamp(0.6vh, 1em, 5vw);
+    font-size: clamp(0.5rem, 2.25vh, 1rem);
     font-weight: 300;
     padding: 10px;
 }
@@ -91,7 +91,7 @@ ul li a:hover {
     align-items: center;
     background: linear-gradient(#2f1544, #b696b6);
     display: flex;
-    height: 100vh;
+    height: clamp(500px, 110vh, 150vh);
     justify-content: center;
     position: relative;
 }
@@ -135,12 +135,11 @@ ul li a:hover {
 }
 
 .cloud_about img {
-    margin: 20px;
     max-height: 40%;
     max-width: 40%;
     min-width: 150px;
     position: absolute;
-    z-index: 10000;
+    z-index: 1000;
 }
 
 #nuage_1 {
@@ -179,6 +178,7 @@ ul li a:hover {
                 -7px -7px 14px #432e4c;
     display: flex;
     padding: 8px 5px;
+    height: 100%;
     z-index: 10;
 }
 
@@ -201,21 +201,18 @@ ul li a:hover {
 }
 
 #schools .container .space {
-    max-height: 150px;
+    height: clamp(4em, 25vh, 130px);
     margin: 20px;
-    width: 130px;
+    width: clamp(3em, 25vh, 130px);
 }
 
 #art_ap, #science_co {
-    background: #3b2843;
+    background: #442153;
     border-radius: 50%;
-    box-shadow: inset -13px 13px 26px #2b1d31,
-                inset 13px -13px 26px #4b3355;
-    margin-bottom: 20px;
-    margin-left: 30px;
-    margin-right: 30px;
-    margin-top: 20px;
-    max-height: 170px;
+    box-shadow: inset -13px 13px 26px #381b45,
+                inset 13px -13px 26px #502761;
+    margin: clamp(1em, 2vh, 20px);
+    height: clamp(4em, 22vh, 22vw);
 }
 
 #constellation {
@@ -224,6 +221,7 @@ ul li a:hover {
     opacity: .2;
     position: absolute;
     z-index: 0;
+    height: 100vh;
 }
 
 #constellation_top {
@@ -264,13 +262,55 @@ ul li a:hover {
 }
 
 #python_logo, #html_logo, #css_logo, #js_logo, #cplus {
+    align-items: center;
+    inset: 0;
     border-radius: 50%;
-    border: 20px solid transparent;
-    box-shadow: 0 0 0 2px #fff;
-    margin: 30px;
-    max-width: 20vw;
+    border: 10px solid transparent;
+    display: flex;
     outline-offset: 12px;
+    position: absolute;
+    transform: translate(5px,5px) rotate(-270deg);
     width: 100px;
+}
+
+.box .pourcent {
+    position: relative;
+    margin: 10px;
+    transform: rotate(270deg);
+    width: clamp(5em, 30vw, 100px);
+}
+
+.box .pourcent svg {
+    position: relative;
+}
+
+svg circle {
+    position: relative;
+    fill: none;
+    stroke: #523f5a;
+    stroke-linecap: round;
+    stroke-width: 6px;
+    transform: translate(5px,5px);
+}
+
+svg circle:nth-child(2) {
+    stroke: var(--clr);
+    stroke-dasharray: 314;
+    stroke-dashoffset: calc(314 - (314 * var(--num)) /100);
+    stroke-width: 5;
+}
+
+svg circle:nth-child(3) {
+    animation: circle 4s ease-out forwards;
+    stroke-dasharray: 314;
+    stroke-dashoffset: 0;
+}
+
+
+@keyframes circle {
+    to {
+        stroke-dashoffset: -314;
+    }
 }
 
 #projet {
@@ -281,13 +321,13 @@ ul li a:hover {
 }
 
 #projet h2 {
-    color: #3b2843;
+    color: #442153;
 }
 
 .slider_text p {
-    color: #3b2843;
+    color: #442153;
     font-size: 0.8em;
-
+    Width : 100%;
 }
 
 #projet .glass {
@@ -297,7 +337,7 @@ ul li a:hover {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    min-height: 80vh;
+    min-height: 60vh;
     padding: 50px;
     width: 90%;
 }
@@ -307,16 +347,66 @@ ul li a:hover {
 }
 
 .slider_text {
-    display: relative;
-    justify-content: row;
     margin: 0 auto;
-    max-width: 48rem;
+    margin-bottom: 7px;
+    max-width: 20rem;
+}
+
+.slider_text nav {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
+.slider_text nav label {
+    border-radius: 12px;
+    cursor: pointer;
+    display: block;
+    height: 60px;
+    line-height: 60px;
+    padding-left: 2rem;
+    width: 100%;
+    z-index: 12;
+}
+
+.slider_text nav label:hover {
+    color: #f2ebf4;
+    
+}
+
+#Hempburn:checked ~ nav .Hempburn
+#Memorio:checked ~ nav .Memorio {
+    color: #fff;
+}
+
+.slider_text input[type="radio"] {
+    display: none;
+}
+
+.slider_text nav .select {
+    background:#3b2843;
+    border-radius: 5px;
+    height: 60px;
+    position: absolute;
+    transition: all 0.4s ease;
+    width: 100%;
+    z-index: 0;
+}
+
+#Hempburn:checked ~ nav .select {
+    top: 0;
+}
+
+#Memorio:checked ~ nav .select {
+    top: 60px;
 }
 
 .slider_wrap {
-    display: block;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
     margin: 0 auto;
-    max-width: 48rem;
+    max-height: 20rem;
 }
 
 .slider {
@@ -342,9 +432,7 @@ ul li a:hover {
     column-gap: 1rem;
     display: flex;
     float: right;
-    margin-right: 15px;
     margin-top: 10px;
-    transform: translateX(-50%);
     z-index: 1;
 }
 
@@ -366,7 +454,6 @@ footer {
     background: linear-gradient(to bottom, #f2ebf4, #d8c1df);
     display: flex;
     flex-wrap: wrap;
-    height: 30vh;
     justify-content: space-evenly;
     left: 0;
     padding-right: 50;
@@ -379,6 +466,7 @@ footer {
 
 footer p {
     color: #3b2843;
+    font-size: 1rem;
 }
 
 .contact {
@@ -409,12 +497,12 @@ footer .cvita a{
     color: #e9d2f0;
     cursor: pointer;
     display: flex;
-    flex-direction: row;
     font-family: 'Pacifico', sans-serif;
-    font-size: 1.5em;
+    font-size: 1.5rem;
     font-weight: 400;
-    padding: 10px 30px;
+    padding: 2vh 5vh;
     text-decoration: none;
+    text-align: center;
     transition : 1000ms;
 }
 
@@ -437,51 +525,19 @@ footer .cvita a{
     }
 
     h2 {
-        font-size: 2em;
-        margin-bottom: 15px;
         padding: 10 px;
-    }
-    
-    p {
-        font-size: 0.8em;
-        padding: 10%;
-        text-decoration: none;
-    }
-
-    #name img {
-        height: 50%;
     }
 
     #text {
-        padding: 10px;
-    }
-
-    #schools h2 {
-        margin-bottom: 10%;
-    }
-
-    #schools p {
-        font-size: 0.6em;
-    }
-
-    #schools .schoolbox {
-        border-radius: 110px;
-        position: relative;
-        right: 0;
-    }
-
-    #schools .container .space {
-        max-height: 100px;
-        width: 5px;
-    }
-
-    #art_ap, #science_co {
-        height: 80px;
-        margin: 5px;
+        padding: 8px;
     }
 
     #python_logo, #html_logo, #css_logo, #js_logo, #cplus {
         margin: 5%;
+    }
+
+    svg circle {
+        transform: translate(10px,10px);
     }
 
 
