--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,8 @@
     padding: 0;
 }
 
+/* Paramètres structure */
+
 body {
     display: block;
     overflow-x: hidden;
@@ -37,7 +39,7 @@ section {
 h2 {
     color: #fff;
     font-family: 'Pacifico', sans-serif;
-    font-size: clamp(2.5rem, 7vh, 3rem);
+    font-size: clamp(2rem, 6.5vh, 3rem);
     font-weight: 400;
     margin-bottom: 15px;
     text-shadow: 2px 2px 4px rgba(0,0,0,.25);
@@ -45,16 +47,20 @@ h2 {
 
 p {
     color: #fff;
-    font-size: clamp(0.5rem, 2.25vh, 1rem);
+    font-size: clamp(0.75rem, 2.5vh, 1rem);
     font-weight: 300;
     padding: 10px;
 }
+
+/* Page accueil */
 
 .logo {
     font-size: 2em;
     color : #ffffffb6;
     pointer-events : none;
 }
+
+/* header */
 
 ul {
     align-items: center;
@@ -81,6 +87,8 @@ ul li a:hover {
     background: white;
     color: #2f1544;
 }
+
+/* parallax */
 
 #space {
     display: flex;
@@ -114,6 +122,8 @@ ul li a:hover {
     width: 100%;
 }
 
+/* About */
+
 #moon_mini {
     float: left;
     height: 30px;
@@ -135,8 +145,8 @@ ul li a:hover {
 }
 
 .cloud_about img {
-    max-height: 40%;
-    max-width: 40%;
+    max-height: 50%;
+    max-width: 50%;
     min-width: 150px;
     position: absolute;
     z-index: 1000;
@@ -166,8 +176,11 @@ ul li a:hover {
     }
 }
 
+/* Ecole */
+
 #schools p {
     vertical-align: middle;
+    margin: 0.75rem;
 }
 
 #schools .schoolbox {
@@ -203,7 +216,7 @@ ul li a:hover {
 #schools .container .space {
     height: clamp(4em, 25vh, 130px);
     margin: 20px;
-    width: clamp(3em, 25vh, 130px);
+    width: clamp(3em, 0vh, 130px);
 }
 
 #art_ap, #science_co {
@@ -211,9 +224,11 @@ ul li a:hover {
     border-radius: 50%;
     box-shadow: inset -13px 13px 26px #381b45,
                 inset 13px -13px 26px #502761;
-    margin: clamp(1em, 2vh, 20px);
-    height: clamp(4em, 22vh, 22vw);
+    margin: clamp(1vh, 2vh, 20px);
+    height: clamp(12vh, 18vh, 18vh);
 }
+
+/* Langage */
 
 #constellation {
     bottom: 0;
@@ -230,10 +245,6 @@ ul li a:hover {
     right: 0;
     top: 0;
     z-index: 0;
-}
-
-#language p {
-    margin-bottom: 2rem;
 }
 
 #language .box {
@@ -269,28 +280,28 @@ ul li a:hover {
     display: flex;
     outline-offset: 12px;
     position: absolute;
-    transform: translate(5px,5px) rotate(-270deg);
-    width: 100px;
+    transform: translate(0.5rem,0.5rem) rotate(-270deg);
+    height: clamp(2rem, 25vw, 100px);
 }
 
 .box .pourcent {
     position: relative;
-    margin: 10px;
+    margin: -2.5rem;
     transform: rotate(270deg);
-    width: clamp(5em, 30vw, 100px);
-}
+    width: clamp(15rem, 25vw, 100px);
+} 
 
 .box .pourcent svg {
     position: relative;
 }
 
 svg circle {
-    position: relative;
-    fill: none;
+    position: relative; 
+    fill: none; 
     stroke: #523f5a;
     stroke-linecap: round;
-    stroke-width: 6px;
-    transform: translate(5px,5px);
+    stroke-width: 6px; 
+    transform: translate(0.5rem,0.5rem);
 }
 
 svg circle:nth-child(2) {
@@ -306,12 +317,13 @@ svg circle:nth-child(3) {
     stroke-dashoffset: 0;
 }
 
-
 @keyframes circle {
     to {
         stroke-dashoffset: -314;
     }
 }
+
+/* Projet glass section */
 
 #projet {
     align-items: center;
@@ -324,35 +336,39 @@ svg circle:nth-child(3) {
     color: #442153;
 }
 
-.slider_text p {
-    color: #442153;
-    font-size: 0.8em;
-    Width : 100%;
-}
-
 #projet .glass {
-    border-radius: 2rem;
+    border-radius: 3rem;
     box-shadow: inset -25px 25px 51px #c8c0cb,
                 inset 25px -25px 51px #f1f1f1;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
     min-height: 60vh;
     padding: 50px;
     width: 90%;
 }
 
-#projet .glass .slider_section {
-    display: contents;
+.glass .section {
+    display: flex;
+    flex-direction: row;
 }
 
 .slider_text {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
     margin: 0 auto;
-    margin-bottom: 7px;
-    max-width: 20rem;
+}
+
+/* Radio label */
+
+.slider_text p {
+    align-items: center;
+    color: #442153;
+    width : 100%;
 }
 
 .slider_text nav {
+    border-radius: 12px;
     display: flex;
     flex-direction: column;
     position: relative;
@@ -360,23 +376,28 @@ svg circle:nth-child(3) {
 
 .slider_text nav label {
     border-radius: 12px;
+    box-shadow: -7px 7px 24px #dad4dc,
+                7px -7px 24px #ffffff;
+    color: #341142;
     cursor: pointer;
     display: block;
-    height: 60px;
+    font-weight: 600;
+    height: clamp(50px, 10vh, 40vh);
     line-height: 60px;
     padding-left: 2rem;
+    padding-right: 2rem;
     width: 100%;
     z-index: 12;
 }
 
-.slider_text nav label:hover {
-    color: #f2ebf4;
-    
+.slider_text nav label :hover {
+    color: #a58caf;
 }
 
-#Hempburn:checked ~ nav .Hempburn
+#Hempburn:checked ~ nav .Hempburn,
 #Memorio:checked ~ nav .Memorio {
     color: #fff;
+    z-index: 1000;
 }
 
 .slider_text input[type="radio"] {
@@ -384,13 +405,15 @@ svg circle:nth-child(3) {
 }
 
 .slider_text nav .select {
-    background:#3b2843;
-    border-radius: 5px;
-    height: 60px;
+    background-image: linear-gradient(to right top, #91769c, #957ba5, #9980ad, #9c86b6, #9f8bbf, #9f90c5, #9e94cc, #9d99d2, #999fd7, #96a4db, #92aadf, #8fafe2);
+    border-radius: 10px;
+    box-shadow: inset -7px 7px 24px #8d8abd,
+                inset 7px -7px 24px #ada8e7;
+    height: clamp(50px, 10vh, 40vh);
     position: absolute;
     transition: all 0.4s ease;
     width: 100%;
-    z-index: 0;
+    z-index: 100;
 }
 
 #Hempburn:checked ~ nav .select {
@@ -398,27 +421,49 @@ svg circle:nth-child(3) {
 }
 
 #Memorio:checked ~ nav .select {
-    top: 60px;
+    top: clamp(50px, 10vh, 40vh);
 }
 
-.slider_wrap {
-    align-items: center;
+/* Slider image */
+
+.slider_Hempburn {
     display: flex;
+}
+
+.slider_Memorio {
+    display: none;
+}
+
+.slider_Hempburn,
+.slider_Memorio {
+    align-items: center;
     flex-direction: column;
-    margin: 0 auto;
-    max-height: 20rem;
+}
+
+#Hempburn:checked ~ .slider_section .slider_Hempburn,
+#Memorio:checked ~ .slider_section .slider_Memorio {
+    display: flex;
+}
+
+#Memorio:checked ~ .slider_section .slider_Hempburn {
+    display: none;
 }
 
 .slider {
-    border-radius: 0.5rem;
+    border-radius: 1rem;
     box-shadow: -5px 5px 22px #bdb5bf,
                 5px -5px 22px #ffffff;
     display: flex;
-    height: 21rem;
+    height: clamp(10.5vh, 21rem, 21rem);
+    margin: -2rem;
     overflow-x: auto;
     scroll-behavior: smooth;
     scroll-snap-type: x mandatory;
     width: 12rem;
+}
+
+.slider_Memorio .slider {
+    width: 10.15rem;
 }
 
 .slider img {
@@ -448,6 +493,8 @@ svg circle:nth-child(3) {
 .slider-nav a:hover {
     opacity: 1;
 }
+
+/* Footer */
 
 footer {
     align-items: center;
@@ -514,6 +561,8 @@ footer .cvita a{
     transition : 1000ms;
 }
 
+/* Media queries */
+
 @media (max-width: 600px) {
 
     header {
@@ -532,13 +581,21 @@ footer .cvita a{
         padding: 8px;
     }
 
-    #python_logo, #html_logo, #css_logo, #js_logo, #cplus {
-        margin: 5%;
+    #art_ap {
+        margin-bottom: 0;
+    } 
+    
+    #science_co {
+        margin-top: 0;
     }
 
-    svg circle {
-        transform: translate(10px,10px);
+    #schools .schoolbox {
+        border-radius: 4rem;
+        flex-direction: column;
     }
 
-
+    #schools .container p {
+        font-size: 1.8vh;
+        padding: 5px;
+    }
 }
