--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -277,7 +277,7 @@ ul li a:hover {
     z-index: 0;
 }
 
-#wave_svg {
+#wave {
     bottom: 0px;
     left: 0;
     margin-top: 10px;
@@ -296,25 +296,21 @@ ul li a:hover {
     outline-offset: 12px;
     position: absolute;
     transform: translate(0.5rem,0.5rem) rotate(-270deg);
-    height: clamp(2rem, 25vw, 100px);
+    height: clamp(2rem, 20vw, 100px);
 }
 
 .box .pourcent {
     position: relative;
     margin: -1.5rem;
     transform: rotate(270deg);
-    width: clamp(11rem, 25vw, 100px);
+    width: 11rem;
 } 
 
-.box .pourcent svg {
-    position: relative;
-}
 
 svg circle {
     position: relative; 
     fill: none; 
     stroke: #523f5a;
-    stroke-linecap: round;
     stroke-width: 6px; 
     transform: translate(0.5rem,0.5rem);
 }
@@ -326,7 +322,7 @@ svg circle:nth-child(2) {
     stroke-width: 5;
 }
 
-svg circle:nth-child(3) {
+svg .progress {
     animation: circle 4s ease-out forwards;
     stroke-dasharray: 314;
     stroke-dashoffset: 0;
@@ -437,7 +433,7 @@ svg circle:nth-child(3) {
 }
 
 #Memorio:checked ~ nav .select {
-    top: clamp(50px, 10vh, 40vh);
+    top: clamp(50px, 8vh, 40vh);
 }
 
 /* Slider image */
@@ -599,10 +595,12 @@ footer .cvita a{
 
     #art_ap {
         margin-bottom: 0;
+        height: clamp(7vh, 10vh, 15vh);
     } 
     
     #science_co {
         margin-top: 0;
+        height: clamp(7vh, 10vh, 15vh);
     }
 
     #schools .schoolbox {
